can now track how many of each item you have, marks it complete when have === quantity

--- a/style.css
+++ b/style.css
@@ -12,3 +12,14 @@ li
 {
 	margin-left: -15px;
 }
+
+input[type=number]
+{
+	width: 25pt;
+}
+
+.complete
+{
+	color: green;
+	font-style: underline;
+}
