--- a/style.css
+++ b/style.css
@@ -23,3 +23,10 @@ input[type=number]
 	color: green;
 	font-style: underline;
 }
+
+a > img
+{
+	border: 2px solid;
+	border-radius: 10px;
+	box-shadow: 2px 2px #CCC;
+}
