--- a/style.css
+++ b/style.css
@@ -13,10 +13,38 @@ ul
 	list-style-type: none;
 }
 
-div
+.no-gutters > [class*="col-"]
+{
+	padding-right: 3px;
+	padding-left: 3px;
+}
+
+.card
+{
+	box-shadow: 2px 2px #EEE;
+	margin-bottom: 7px;
+}
+
+.card-header
 {
 	padding: 0;
+}
+
+.card-title
+{
+	font-size: 1.3em;
+}
+
+.card-body
+{
+	padding: 5px;
+}
+
+.list
+{
 	margin: 0;
+		margin-left: -40px;
+	padding: 0;
 }
 
 .complete
@@ -25,7 +53,13 @@ div
 	font-weight: bold;
 }
 
-img
+img.header
+{
+	margin: 0;
+	padding: 0;
+}
+
+img.icon
 {
 	border: 2px solid #AAA;
 	border-radius: 10px;
@@ -44,10 +78,10 @@ img
 
 a.cancel
 {
-	padding: 0;
-		padding-left: 5px;
-	margin: 0;
 	color: #DDD;
+	position: absolute;
+		top: 1px;
+		right: 1px;
 }
 
 a.cancel:hover
