--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body
 	cursor: pointer;
 }
 
+img.icon.clickable:hover
+{
+	border: 2px solid rgba(0,0,0,.4);
+}
+
 ul
 {
 	list-style-type: none;
@@ -72,9 +77,9 @@ img.header
 
 img.icon
 {
-	border: 2px solid #AAA;
+	border: 2px solid #CCC;
 	border-radius: 10px;
-	box-shadow: 2px 2px #CCC;
+	box-shadow: 1px 1px #AAA;
 }
 
 a.cancel
