--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ input.quantity
 .modal-header
 {
 	display: block;
+	background-color: rgba(0,0,0,.05);
 }
 
 .modal-header .close
@@ -126,4 +127,9 @@ input.quantity
 	margin: 0;
 	padding: 0;
 	line-height: 1;
+}
+
+.modal-body
+{
+	padding: 25px;
 }
