--- a/style.css
+++ b/style.css
@@ -127,9 +127,10 @@ input.quantity
 	margin: 0;
 	padding: 0;
 	line-height: 1;
+	font-size: 1.5em;
 }
 
-.modal-body
+.modal-footer
 {
-	padding: 25px;
+	padding: 5px;
 }
